# opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  conanfile.txt  dependency_graph.html  main.cpp
include/: application.h  camera.h  mesh.h  model.h  shader.h  utils.h
include/glad/: glad.h
libs/glad/: CMakeLists.txt  glad.c  glad.h
libs/stb_image/: CMakeLists.txt
src/: CMakeLists.txt  common.h  draw_rectangle_EBO.cpp  exercise1.cpp  exercise2.cpp  exercise3.cpp  glad.c  main.cpp  shader.cpp  shaders.cpp  stb_image.cpp  textures.cpp
src/advanced_lighting/: CMakeLists.txt  blinn_phong.cpp  bloom.cpp  deffered_shading.cpp  gamma_correction.cpp  hdr.cpp  normal_map.cpp  parallax_mapping.cpp  parallax_occlusion_mapping.cpp  point_shadow.cpp  shadow_mapping_base.cpp  shadow_mapping_depth.cpp  shadow_mapping_improved.cpp  ssao.cpp  steep_parallax_mapping.cpp
src/advanced_lighting/shaders/blinn_phong/: frag.glsl
src/advanced_lighting/shaders/deffered_shading/: deferred_shading_frag.glsl
src/advanced_lighting/shaders/gamma_correction/: frag.glsl
src/advanced_lighting/shaders/normal_map/: normal_mapping_frag.glsl  normal_mapping_vertx.glsl
src/advanced_lighting/shaders/parallax_mapping/: frag.glsl
src/advanced_lighting/shaders/parallax_occlusion_mapping/: frag.glsl
src/advanced_lighting/shaders/point_shadow/: point_shadows_frag.glsl
src/advanced_lighting/shaders/shadow_mapping/: depth_frag.glsl  frag.glsl
src/advanced_lighting/shaders/steep_parallax_mapping/: frag.glsl  vertx.glsl
src/advanced_opengl/: CMakeLists.txt  asteroids.cpp  asteroids_instanced.cpp  blending.cpp  blending_discard_fragment.cpp  blending_semi_transparent.cpp  cubemap.cpp  depth_test.cpp  environment_mapping.cpp  face_culling.cpp  frame_buffer.cpp  frame_buffer_post_processing.cpp  framebuffer.cpp  framebuffer_rear_view_mirror.cpp  geometry_shader.cpp  geometry_shader_explode.cpp  instancing.cpp  instancing_asteroids.cpp  math.cpp  msaa.cpp  normal_visualization.cpp  stencil_testing.cpp  ubo.cpp
src/advanced_opengl/shaders/blending/: frag.glsl
src/advanced_opengl/shaders/blending_discard_fragment/: frag.glsl  vertex.glsl
src/advanced_opengl/shaders/cubemap/: skybox_vertx.glsl
src/advanced_opengl/shaders/cubemap/environment_mapping/: cube_frag.glsl  cube_vertx.glsl
src/advanced_opengl/shaders/depth_test/: frag.glsl  vertex.glsl
src/advanced_opengl/shaders/frame_buffer/: framebuffer_fs.glsl  framebuffer_screen_fs.glsl  framebuffer_vertx.glsl  post_processing_screen_fs.glsl  post_processing_screen_vertx.glsl
src/advanced_opengl/shaders/geometry_shader/: fragment_shader.glsl  geometry_shader.glsl  vertex_shader.glsl
src/advanced_opengl/shaders/instancing/: vertex_shader.glsl
src/advanced_opengl/shaders/normal_visualization/: normal_frag_shader.glsl  normal_geometry_shader.glsl  vertex_shader.glsl
src/advanced_opengl/shaders/ubo/: cube_frag.glsl  cube_vertx.glsl  skybox_frag.glsl  skybox_vertx.glsl
src/app/: application.h  camera.h  mesh.h  mesh_g.h  model.h  model_g.h  shader.cpp  shader.h  shader_g.h  texture.h  utils.h
src/camera/: CMakeLists.txt  camera.cpp
src/camera/shaders/: CameraFragmentShader.shader
src/coordinates_system/: 3d.cpp  CMakeLists.txt  coordinate_system.cpp
src/coordinates_system/shaders/: CoordinateSysVertexShader.shader
src/debugging/: CMakeLists.txt  debug.cpp
src/debugging/shaders/debugging/: debugging_frag.glsl  debugging_vertx.glsl
src/lighting/: CMakeLists.txt  ambient.cpp  diffuse.cpp  diffuse_map.cpp  directional_light.cpp  lighting.cpp  material.cpp  multiple_light_source.cpp  point_light_attenuation.cpp  specular.cpp  specular_map.cpp  spotlight.cpp  spotlight_soft_edges.cpp
src/lighting/shaders/: LightingFragment.shader  cubeFrag.shader
src/lighting/shaders/ambient/: cubeFrag.shader  cubeVertex.shader
src/lighting/shaders/diffuse/: cubeFrag.shader  cubeVertex.shader
src/lighting/shaders/diffuseMap/: cubeFrag.shader  lightVertex.shader
src/lighting/shaders/directional_light/: cubeFrag.shader  lightVertex.shader
src/lighting/shaders/material/: cubeFrag.shader  cubeVertex.shader  lightFrag.shader
src/lighting/shaders/multiple_light_source/: cubeFrag.shader  cubeVertex.shader
src/lighting/shaders/point_light/: cubeFrag.shader
src/lighting/shaders/specular/: cubeFrag.shader
src/lighting/shaders/specularMap/: cubeFrag.shader
src/lighting/shaders/spotlight/: cubeFrag.shader  lightFrag.shader
src/lighting/shaders/spotlight_soft_edges/: cubeFrag.shader  cubeVertex.shader  lightVertex.shader
src/model_loading/: CMakeLists.txt  model_loading.cpp
src/model_loading/shaders/model/: modelFrag.shader
src/shaders/: CMakeLists.txt  fragment_shader.shader  shaders.cpp  texVertex.shader  textureFrag.shader  vertex.shader  vertex_shader.shader
src/text_rendering/: CMakeLists.txt  render_text.cpp
src/texture/: CMakeLists.txt  textures.cpp
src/texture/shaders/: textureFrag.shader
src/transformation/: CMakeLists.txt  ex.cpp  glm.cpp  transformation.cpp
src/transformation/shaders/: transformationFragment.shader  transformationVertex.shader
src/triangle/: CMakeLists.txt  draw_rectangle_EBO.cpp  draw_triangle.cpp  exercise1.cpp  exercise2.cpp  exercise3.cpp
